# fastapi-mirrorlist

./: .dockerignore  .env  .pylintrc  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: python checks.yml
app/: main.py
helpers/: containers.py  traefik_labels.py
nginx/: Dockerfile  default.conf  index.html  statics.tar
