[tool.poetry]
name = "fastapi-mirrorlist"
version = "0.1.0"
description = "Simple mirrorlist for Centos"
authors = ["adrixop95 <adrixop95@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
gunicorn = "^20.1.0"
requests = "^2.25.1"
docker = "^5.0.0"
flake8 = "^3.9.1"
pylint = "^2.7.4"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
